k8s/microservices/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: catalog
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: catalog
    spec:
      containers:
      - image: afiffahreza/microservice-catalog:1
        name: catalog
        ports:
        - containerPort: 8000
        resources: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: customer
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      run: customer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: customer
    spec:
      containers:
      - image: afiffahreza/microservice-customer:1
        name: customer
        ports:
        - containerPort: 8000
        resources: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      run: order
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: order
    spec:
      containers:
      - image: afiffahreza/microservice-order:1
        name: order
        ports:
        - containerPort: 8000
        resources: {}
status: {}
