k8s/microservices/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: catalog
  name: catalog
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: catalog

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: customer
  name: customer
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: customer

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: order
  name: order
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: order
