k8s/microservices/base/ingress-microservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /catalog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 8000
      - path: /customer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 8000
      - path: /order(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8000
